Bug fix: Overflowing text in the Sync Clippings help dialog

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -658,7 +658,7 @@ body[data-os="win"] #turn-off-sync-clippings-ack-dlg #delete-sync-fldr-opt > #de
 }
 
 #sync-clippings-help-dlg .dlg-content {
-    max-height: 406px;
+    max-height: 340px;
     overflow-y: auto;
 }
 
